# music-pipeline

./: .env.tpl  .gitignore  CLAUDE.md  Dockerfile  PR_COMMENT.md  README.md  compose.yml  entrypoint.sh  justfile  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: hookify.docker-run-inspection.local.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  fetch.yml  scan.yml  service.yml
config/: playlists.conf
config/beets/: config.yaml  integration-test-config.yaml
config/spotdl/: config.json
docs/: manual-test-plan.md  plan-e2e-testing.md  plan-unified-service.md
fetch/: Dockerfile  pyproject.toml  requirements.txt
fetch/music_fetch/: cli.py  config.py  ingest.py  metrics.py  spotdl_ops.py
fetch/pipeline/: cli.py  config.py  ingest.py  metrics.py  spotdl_ops.py
fetch/tests/: test_config.py  test_ingest.py  test_metrics.py  test_spotdl_ops.py
pipeline/: cli.py  ingest.py  library.py  metrics.py  music_pipeline.py  navidrome.py  scan.py  spotdl_ops.py  spotdl_replace.py
prds/: music-pipeline-service.md
scan/: Dockerfile  pyproject.toml  requirements.txt
scan/music_scan/: cli.py  library.py  mb_fingerprint.py  music_pipeline.py  navidrome.py  process.py  reconcile.py  scan.py
scan/music_scan/beetsplug/: music_pipeline.py
scan/pipeline/: cli.py  library.py  metrics.py  music_pipeline.py  navidrome.py  process.py  scan.py
scan/tests/: test_metrics.py  test_music_pipeline.py  test_navidrome.py  test_reconcile.py  test_scan.py
scripts/: backfill-spotify-urls.py  export-cookies.py  fetch-spotify-snapshot.py  music-files  music-import  music-ingest  music-provision  music-remove  music-scan  music-setup  rebuild-spotdl-snapshot.py  recover-source-tags.py
scripts/tests/: test_music_files.py
service/: Dockerfile  pyproject.toml  requirements.txt
service/music_service/: api.py  auth.py  cli.py  debounce.py  flows.py  orchestrator.py  prefect_client.py
service/tests/: test_api.py  test_auth.py  test_debounce.py  test_flows.py  test_orchestrator.py
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_auth.py  test_import.py  test_ingest.py  test_metrics.py  test_music_pipeline.py  test_scan.py  test_service_api.py  test_service_e2e.py  test_service_push.py  test_service_smoke.py  test_smoke.py
tests/fixtures/audio/: README.md
