[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-pipeline-fetch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
music-ingest = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
