[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-pipeline-fetch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
music-ingest = "music_fetch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_fetch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
