[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-pipeline-scan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
music-scan = "music_scan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_scan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
